# cs180-22-datadetectives

./: .gitignore  CMakeLists.txt  OpenFile.hpp  OpenFile_Test.hpp  README.md  ReadBytes.h  loadCSV_Test.hpp  main.cpp  splitting.h
.github/workflows/: main.yml
Tests/: csvSplit_Test.hpp
data/: car_sales_data.csv  data.json  data1.txt  example.txt  extraLines.csv  normal.csv  temp_data.txt  test.json  yellow_tripdata_2016-03.csv
src/: CSVLoader.hpp  Concurrency.hpp  Filter.hpp  IMapReduce.hpp  Job.hpp  JsonReader.hpp  MapReduceEngine.cpp  MapReduceEngine.hpp  OpenFile.hpp  OutputJob.hpp  OutputSorter.hpp  ReadBytes.h  Reducer.hpp  TXTLoader.hpp  WriteCSV.hpp  WriteJSON.hpp  WriteTXT.hpp  csvSplitter.hpp
test/: JsonReaderTest.cpp  OpenFile_Test.hpp  ReducerTest.cpp  WordCountMapReduce.cpp  job_Test.hpp  loadCSV_Test.hpp  splittingCorrect.json  test.cpp
testFiles/: CSVReadTest.cpp  CarAvgPrice.cpp  FilterTest.hpp  JsonReaderTest.cpp  MapSortTest.cpp  MapTest.hpp  OpenFile_Test.hpp  OutputSorterTest.cpp  ReduceTest.hpp  SequentialTempAvgTest.hpp  ShuffleTest.hpp  TempAvgMapReduce.cpp  TrafficAvg.cpp  WordCountMapReduce.cpp  csvSplit_Test.hpp  integrationTest.hpp  loadCSV_Test.hpp  loadTXT_text.cpp  loadTXT_text.hpp  multiple_files_Test.cpp  test.cpp  testProg.cpp
x64-Debug/: .ninja_deps  .ninja_log  build.ninja
x64-Debug/.cmake/api/v1/reply/: cache-v2-7c167162ddf0cdfad111.json  cmakeFiles-v1-fde87854910d045fca66.json  codemodel-v2-6b06f9f0d206d32ca37e.json  directory-googletest.googlemock-Debug-a183d798291c91a8c024.json  directory-googletest.googletest-Debug-9e7e7c005e6c490f6644.json  index-2023-05-02T09-02-55-0441.json  target-gmock-Debug-3a239db5d16ee30ee61b.json  target-gmock_main-Debug-6e76400b407c08a8e547.json  target-gtest-Debug-50f8c44c1a5920e758e1.json  target-gtest_main-Debug-92bb5abfa2c1e70d27fc.json  target-test-Debug-aeddd6ae779d10b267cd.json
x64-Debug/googletest/: CTestTestfile.cmake
x64-Debug/googletest/googlemock/: CTestTestfile.cmake
x64-Debug/googletest/googletest/: CTestTestfile.cmake
